day13-techwithdiwana_gcp_llm_cluster/k8s/fastapi-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: twd-llm-fastapi
  namespace: techwithdiwana-llm-prod
  labels:
    app: twd-llm-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twd-llm-fastapi
  template:
    metadata:
      labels:
        app: twd-llm-fastapi
    spec:
      containers:
        - name: fastapi
          image: techwithdiwana/llm-fastapi:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
