day13-techwithdiwana_gcp_llm_cluster/k8s/node-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: twd-llm-node-gateway
  namespace: techwithdiwana-llm-prod
  labels:
    app: twd-llm-node-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twd-llm-node-gateway
  template:
    metadata:
      labels:
        app: twd-llm-node-gateway
    spec:
      containers:
        - name: node-gateway
          image: techwithdiwana/llm-node-gateway:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
