day13-techwithdiwana_gcp_llm_cluster/k8s/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twd-llm-ingress-local
  namespace: techwithdiwana-llm-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: llm.techwithdiwana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: techwithdiwana-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: techwithdiwana-node-gateway
                port:
                  number: 8080
